--- a/eclipse项目/WebContent/admin/css/style1.css
+++ b/eclipse项目/WebContent/admin/css/style1.css
@@ -19,6 +19,7 @@ ul li a{
 	color: white;
 	text-align: right;
 	padding-right: 20px;
+	background-color: #4A4A4A;
 }
 
 
@@ -45,6 +46,7 @@ ul li a{
 .style1{
 	text-align: left;
 	line-height: 1.5;
+	padding-top:40px;
 }
 .style1 li{
 	display: block;
